--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,19 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+	  <groupId>javax.persistence</groupId>
+	  <artifactId>javax.persistence-api</artifactId>
+	  <version>2.2</version>
+	</dependency>
+	<dependency>
+	  <groupId>io.quarkus</groupId>
+	  <artifactId>quarkus-hibernate-validator</artifactId>
+	</dependency>
+	<dependency>
+	  <groupId>io.quarkus</groupId>
+	  <artifactId>quarkus-hibernate-orm-panache</artifactId>
+	</dependency>
   </dependencies>
   <build>
     <plugins>
